# IFp

./: .gitignore  README.md
schematics/: README.md  fp-info-cache  fp-lib-table  schematics.kicad_pcb  schematics.kicad_prl  schematics.kicad_pro  schematics.kicad_sch  sym-lib-table
schematics/ESP32-C_SUPERMINI/: MODULE_ESP32-C3_SUPERMINI_TH.kicad_mod
src/rp2040/: .gitignore  CMakeLists.txt  main.cpp  zx.pio
src/rp2350b/: 48.rom.cpp  CMakeLists.txt  main.cpp  testrom.bin.cpp  utils.cpp  utils.h  zpi.md  zx.cpp  zx.h  zx.pio
